--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,40 @@
 @import "tailwindcss";
 
 @layer base {
-  html, body {
+
+  html,
+  body {
     background-color: #0A0A0A;
     color: white;
     min-height: 100vh;
+  }
+
+  /* Fix for "black data" on mobile inputs */
+  input,
+  textarea,
+  select {
+    color: white !important;
+    background-color: transparent;
+    color-scheme: dark;
+  }
+
+  /* Fix date picker icon in dark mode */
+  ::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+  }
+
+  /* Fix autofill background */
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus,
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus {
+    -webkit-text-fill-color: white;
+    -webkit-box-shadow: 0 0 0px 1000px #0A0A0A inset;
+    transition: background-color 5000s ease-in-out 0s;
   }
 }
